--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [workspace]
 members = [
-  "parser",
-  "parser/visitable-derive",
-  "parser/generator",
-  "checker",
-  "checker/binary-serialize-derive",
-  "checker/specification",
-  # "lsp/server",
+	"parser",
+	"parser/visitable-derive",
+	"parser/generator",
+	"checker",
+	"checker/binary-serialize-derive",
+	# "lsp/server",
 ]
 
 [package]
@@ -20,13 +19,18 @@ homepage = "https://kaleidawave.github.io/posts/introducing-ezno/"
 repository = "https://github.com/kaleidawave/ezno"
 default-run = "ezno"
 categories = ["compilers"]
-keywords = ["javascript", "typescript", "type-checker"]
+keywords = [
+	"javascript",
+	"typescript",
+	"type-checker"
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 name = "ezno_lib"
 path = "src/lib.rs"
+
 # cdylib is for WASM
 crate-type = ["cdylib", "rlib"]
 
@@ -41,6 +45,7 @@ argh = "0.1"
 base64 = "0.22"
 codespan-reporting = "0.11"
 enum-variants-strings = "0.3"
+
 # For `StrComparison` for string comparison
 pretty_assertions = "1.3"
 serde = { version = "1.0", features = ["derive"] }
@@ -51,10 +56,13 @@ js-sys = "0.3"
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 # For updating binary
 self-replace = "1.3"
+
 # For updating binary and possibly more in the future
 native-tls = "0.2"
+
 # For CLI input across multiple lines
 multiline-term-input = "0.1"
+
 # For watching files
 notify = "8"
 notify-debouncer-full = "0.5"
