--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ path = "src/main.rs"
 argh = "0.1"
 base64 = "0.22"
 # TODO requires https://github.com/kaleidawave/source-map/pull/7
-codespan-reporting = "0.12"
+codespan-reporting = "0.11"
 enum-variants-strings = "0.3"
 
 # For `StrComparison` for string comparison
@@ -106,6 +106,9 @@ too_many_lines = "allow"
 new_without_default = "allow"
 result_unit_err = "allow"
 implicit_hasher = "allow"
+
+[package.metadata.commands]
+parse_print_ast = "cargo run -p ezno-parser --example parse ./private/toparse/aaa.tsx --ast"
 
 # [profile.dev]
 # debug = false
